<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"

    tools:context=".Setari">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doriti_sa_primiti_notificari"
        android:textSize="33sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center_horizontal"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/da_doar_detalii_despre_contul_meu"
        android:id="@+id/ch_1"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/da_atat_despre_contul_meu_cat_si_despre_cele_mai_recente_oferte"
        android:id="@+id/ch_2"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nu_multumesc"
        android:id="@+id/ch_3"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/afiseaza_ce_a_fost_selectat"
        android:background="@drawable/button_rounded_cont"
        android:id="@+id/rezultat"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/afisare_rez"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:text="@string/in_functie_de_zona_in_care_va_aflati_veti_primi_oferte_exclusive"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alege_zona"
        android:layout_marginTop="10dp"
        android:textSize="15sp"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/my_spnr"
        android:layout_marginTop="20dp"
        />

</LinearLayout>