<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MagazinActivitate">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView

               android:layout_width="125dp"
                android:layout_height="170dp"
                android:id="@+id/img"
                android:scaleType="centerCrop"
                android:contentDescription="@string/arata" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/den"
                android:textSize="20sp"
                android:id="@+id/den"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categ"
                android:id="@+id/categ"
                android:padding="8dp"
                android:layout_marginTop="10dp"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/descriere"
                android:layout_marginTop="10dp"
                android:text="@string/des"/>


        </LinearLayout>



    </androidx.core.widget.NestedScrollView>



</LinearLayout>