<?xml version="1.0" encoding="utf-8"?>



    <LinearLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Carduri"
        android:orientation="vertical"
        android:padding="30dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_nume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/colorAccent"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="20">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numele_magazinului"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_nrCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAccent"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numar_de_card"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>






        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:id="@+id/sw"
            android:text="@string/notificari"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt1"

            />

        <Button
            android:id="@+id/btn_adauga"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/confirm"
            android:layout_marginTop="10dp"
            android:onClick="Adauga"
            android:background="@drawable/button_rounded_cont"


            />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lista_carduri"
        />


</LinearLayout>